# author-collector

./: .gitignore  CHANGELOG.md  CHANGESET.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  ROLLBACK.md  pyproject.toml
.github/workflows/: canary.yml  ci.yml
author_collector/: __init__.py  cli.py
canary/: sources.json
connectors/: __init__.py  arxiv.py  html_author_page.py  rss.py
core/: __init__.py  config.py  evidence.py  models.py  pipeline.py  structured_logging.py
docs/: alerts.md  canary.md  compliance.md  migrations.md  non-negotiables.md  repo-guardrails.md  verification.md
docs/releases/: v0.1.0.md
extractor/: __init__.py  article.py
fetcher/: __init__.py  http.py  logging.py  politeness.py  robots.py
parser/: __init__.py  html.py  jsonld.py
quality/: __init__.py  urlnorm.py
resolution/: __init__.py  scoring.py
schemas/: article.schema.json  evidence.schema.json
scripts/: apply_branch_protection.py  run_canary.py
storage/: __init__.py  sqlite.py
storage/migrations/: 0001_init.sql
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_alignment.py  test_schema_compliance.py
tests/fixtures/arxiv/: response.atom
tests/fixtures/html/: author_page.html  edge.html  malformed.html  normal.html
tests/fixtures/rss/: example.xml
tests/integration/: test_arxiv_connector_e2e.py  test_export_and_rollback.py  test_extractor_article.py  test_fetcher_foundation.py  test_html_author_page_connector_e2e.py  test_parser_foundation.py  test_pipeline_error_logging.py  test_pipeline_persistence.py  test_resolution_review.py  test_rss_connector_e2e.py  test_storage_versioning.py
