[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "author-collector"
version = "0.1.0"
description = "A compliant, evidence-first pipeline for aggregating public author content across platforms with identity resolution and structured extraction."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Zhenwu-C-Wang", email = "contact@example.com"}
]

dependencies = [
  "pydantic>=2.0",
  "jsonschema>=4.0",
  "requests>=2.28",
  "cachetools>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "ruff>=0.1",
  "mypy>=1.0",
]
parser = [
  "trafilatura>=1.7",  # HTML → readable text
  "feedparser>=6.0",    # RSS parsing
]

[project.scripts]
author-collector = "author_collector.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["core", "storage", "author_collector", "fetcher", "parser", "extractor", "quality", "connectors", "resolution"]

[tool.hatch.build.targets.sdist]
include = [
  "core",
  "storage",
  "author_collector",
  "fetcher",
  "parser",
  "extractor",
  "quality",
  "connectors",
  "resolution",
  "schemas",
  "docs",
  "tests",
  "README.md",
  "ROADMAP.md",
  "ROLLBACK.md",
  "CHANGESET.md",
  "LICENSE",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --tb=short --strict-markers"
testpaths = ["tests"]
markers = [
  "contract: contract schema validation tests",
  "integration: end-to-end tests",
  "unit: unit tests",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "D"]
ignore = [
  "E501",  # line too long (handled by black)
  "D200",  # one-line docstring fit
  "D203",  # class blank line style
  "D204",  # class blank line style
  "D212",  # multi-line summary position
  "D213",  # multi-line summary position
  "D400",  # first line punctuation style
  "D401",  # imperative mood style
  "D413",  # blank line after section
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # relax for v0
